# latex_snippet

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-python  publish  pyproject.toml  requirements.txt
.github/workflows/: python.yml  rust.yml
check_installed/: check_installed.py
conversions/: Cargo.toml
latex_snippet/: __init__.py
src/: lib.rs  tests.rs
