[package]
name = "latex_snippet"
version = "0.1.11"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
edition = "2018"
description = "Convert even erroneous LaTeX snippets into HTML"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1"

[lib]
name = "latex_snippet"
crate-type = ["cdylib", "lib"]

[package.metadata.pyo3-pack]

[workspace]
