[package]
name = "latex_snippet"
version = "0.2.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
edition = "2018"
description = "Convert even erroneous LaTeX snippets into HTML"
license = "GPL-3.0-or-later"
repository = "https://github.com/droundy/latex_snippet"

[lib]
name = "latex_snippet"
crate-type = ["cdylib", "lib"]

[dependencies]

regex = "1"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[package.metadata.pyo3-pack]

[workspace]
