[package]
name = "conversions"
version = "0.1.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

auto-args = "0.2.2"
latex_snippet = { path = "..", version = "0.1.9" }
regex = "1"
tempfile = "3.1.0"

[workspace]
